basic chat socket events, basic html interface

--- a/public/index.html
+++ b/public/index.html
@@ -15,18 +15,15 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <div class="chattie-wrapper">
+            <h2>Messages</h2>
+            <div class="message-board"></div>
+            <form>
+                <input type="text" />
+                <button type="submit">Submit</button>
+            </form>
+        </div>
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-            const socket = io('http://localhost:3000');
-
-            socket.on('connect', () => {
-                alert('Connected to server!')
-            });
-
-            socket.on('disconnect', () => {
-                alert('Disconnected to server!')
-            });
-        </script>
+        <script src="./js/index.js"></script>
     </body>
 </html>
