broadcasting user is typing event to other connections

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
         <div class="chattie-wrapper">
             <h2>Messages</h2>
             <div class="message-board"></div>
+            <div class="user-interaction-message"></div>
             <form>
                 <input type="text" />
                 <button type="submit">Submit</button>
