added event acknowledgement on createMessage

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <![endif]-->
         <div class="chattie-wrapper">
             <h2>Messages</h2>
-            <div class="message-board"></div>
+            <ul class="message-board"></ul>
             <div class="user-interaction-message"></div>
             <form>
                 <input type="text" />
